--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/themeimage"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="#F00097A7"
+        android:background="#2196F3"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher_foreground" />
 
