--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -212,7 +212,7 @@
         app:layout_constraintGuide_begin="57dp" />
 
     <TextView
-        android:id="@+id/textViewtheme"
+        android:id="@+id/textDescriptionView"
         android:layout_width="250dp"
         android:layout_height="30dp"
         android:layout_marginTop="500dp"
