--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -5,7 +5,7 @@
 
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#4dd7fa"/>
+    <solid android:color="@color/snoozeBlau"/>
     <corners android:radius="30dp"/>
     <size android:height="10dp"/>
     <size android:width="16dp"/>
