--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -213,7 +213,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="800dp"
         android:layout_marginBottom="170dp"
-        android:backgroundTint="#00BCD4"
+        android:backgroundTint="@color/snoozeBlau"
         android:contentDescription="@string/playbutton"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -226,7 +226,7 @@
         android:layout_height="70dp"
         android:layout_marginEnd="280dp"
         android:layout_marginBottom="170dp"
-        android:backgroundTint="#00BCD4"
+        android:backgroundTint="@color/snoozeBlau"
         android:contentDescription="@string/pausebutton"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -242,6 +242,7 @@
         android:layout_marginEnd="250dp"
         android:layout_marginBottom="170dp"
         android:backgroundTint="@color/snoozeBlau"
+        android:contentDescription="@string/stopsound"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
